bugs squashing

--- a/styles/index.css
+++ b/styles/index.css
@@ -49,8 +49,7 @@ ul li a {
 
 .hero-section {
     display: flex;
-    min-width: 767px;
-    max-width: 1440px;
+    width: 100vw;
     height: 767px;
     background-image: url(../images/Image\ \(1\).png);
     background-position: center;
@@ -447,7 +446,7 @@ ul li a {
 /* this is for mobile screen */
 
 
-@media(min-width: 375px) {
+@media(max-width: 375px) {
 
     header {
         padding: 10px;
@@ -463,7 +462,6 @@ ul li a {
         justify-content: space-between;
         align-items: center;
         margin: 0 10px;
-        gap: 1rem;
         
     }
 
@@ -491,7 +489,7 @@ ul li a {
         width: 100vw;
         height: 767px;
         background-image: url(../images/Image\ \(1\).png);
-        background-position: right;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
     }
